--- a/JetPack/app/src/main/res/values/colors.xml
+++ b/JetPack/app/src/main/res/values/colors.xml
@@ -5,6 +5,21 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+
+
+
+    <color name="colorPrimary">#008577</color>
+    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorAccent">#D81B60</color>
+
+    <color name="white">#fff</color>
+    <color name="black">#000</color>
+    <color name="gray">#666</color>
+    <color name="light_gray">#999</color>
+    <color name="transparent">#00000000</color>
+
+    <color name="my_c1">#D4D6BD</color>
+    <color name="my_c2">#EC0855</color>
+    <color name="my_c3">#B4D9DD</color>
+
 </resources>
